# CitePilot

./: .dockerignore  .env.example  .env.production.example  .gitignore  Makefile  README.md  compose.production.yml  docker-compose.yml  req.txt
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_authentication.py  0003_ownership_indexes.py
backend/app/: app.py  config.py  deps.py  logging.py  main.py
backend/app/agent/: demo_orchestrator.py  orchestrator.py  prompts.py  schemas.py  tool_registry.py  tools.py
backend/app/agent/llm/: anthropic_client.py  base.py  fake.py  openai_client.py  providers.py
backend/app/api/: router.py
backend/app/api/routes/: agent.py  auth.py  demo.py  files.py  graph.py  health.py  jobs.py  latex.py  papers.py  projects.py
backend/app/auth/: __init__.py  dependencies.py  email.py  middleware.py  security.py
backend/app/db/: models.py  postgres.py
backend/app/graph/: neo4j_client.py  queries.py  resync.py  schema.py  sync.py
backend/app/ingestion/: bibtex.py  crossref.py  normalize.py  openalex.py  semantic_scholar.py  upsert.py
backend/app/latex/: __init__.py  compiler.py  patcher.py  sanitizer.py
backend/app/mcp_server/: server.py  tools.py
backend/app/retrieval/: chunking.py  embeddings.py  explain.py  fusion.py  graph_search.py  hybrid.py  vector_search.py
backend/app/tests/: conftest.py  test_agent_stream.py  test_auth_email.py  test_auth_security.py  test_bibtex.py  test_demo_agent.py  test_demo_limits.py  test_fusion.py  test_graph_queries.py  test_health.py  test_hybrid_retrieval.py  test_latest_compilation.py  test_latex_patcher.py  test_normalize.py  test_path_sanitizer.py
backend/app/tests/fixtures/: crossref_bibtex.txt  openalex_search.json  openalex_work.json  semantic_scholar_paper.json
backend/app/workers/: arq_app.py  jobs.py
docs/: BACKEND_CHANGES.md
guides/: 01-bootstrap-and-docker.md  02-backend-foundation.md  10-showcase-readiness.md  DEMO_SCRIPT.md  (+4 more)
(+57 files in other folders)
